--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="home" id="home-section">
             <div class="home-intro">
                 <h1> Hi I'm Jerric</h1>
-                <p> I am passionate about coding and software and i need to find an internship</p>
+                <p>I'm a Singapore-based student pursuing a Bachelor of Science in Information Systems, specializing in Smart City technology. My passion lies in harnessing technology to create systems that improve lives. I aspire to be an entrepreneur, building businesses that put innovation at the service of social good. With skills in both front-end and back-end development and a familiarity with QGIS, I'm a problem-solver and team player ready to learn and contribute.</p>
                 <div class="home-links">
                     <a target="_blank" href="https://www.github.com/Jerric1801"><img src="static/images/github-logo.png"
                             alt="Github Logo"></a>
