--- a/index.html
+++ b/index.html
@@ -22,20 +22,36 @@
         <!-- end absolute items -->
         <div class="home" id="home-section">
             <div class="home-intro">
+                <div class = "home-image">
+                    <img src = "">
+                </div>
                 <h1> Hi I'm Jerric</h1>
-                <p>I'm a Singapore-based student pursuing a Bachelor of Science in Information Systems, specializing in Smart City technology. My passion lies in harnessing technology to create systems that improve lives. I aspire to be an entrepreneur, building businesses that put innovation at the service of social good. With skills in both front-end and back-end development and a familiarity with QGIS, I'm a problem-solver and team player ready to learn and contribute.</p>
+                <p>I'm a Singapore-based student pursuing a Bachelor of Science in Information Systems, specializing in
+                    Smart City technology. My passion lies in harnessing technology to create systems that improve
+                    lives. I aspire to be an entrepreneur, building businesses that put innovation at the service of
+                    social good. With skills in both front-end and back-end development and a familiarity with QGIS, I'm
+                    a problem-solver and team player ready to learn and contribute.</p>
                 <div class="home-links">
-                    <a target="_blank" href="https://www.github.com/Jerric1801"><img src="static/images/github-logo.png"
-                            alt="Github Logo"></a>
-                    <a>Resume</a>
+                    <div class="home-links-stack">
+                        <a target="_blank" href="https://www.github.com/Jerric1801">
+                            <img src="static/images/github-logo.png" alt="Github Icon">
+                            <p>Github</p>
+                        </a>
+                    </div>
+                    <div class="home-links-stack">
+                        <a target="_blank" href="https://www.github.com/Jerric1801">
+                            <img src="static/images/personal-profile.png" alt="Resume Icon">
+                            <p>Resume</p>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
         <div class="works" id="works-section">
-                    <!-- absolute items -->
-        <div id="works-popup">
-            <p id="popup-back"><- back</p>
-        </div>
+            <!-- absolute items -->
+            <div id="works-popup">
+                <p id="popup-back"><- back</p>
+            </div>
 
             <ul id="work-kanban" class="droppable">
 
@@ -96,6 +112,18 @@
 
 
                 <li class="rect-widget map-widget draggable">
+                    <button class = "map-button">
+                        <
+                    </button>
+                    <button class = "map-button">
+                        >
+                    </button>
+                    <button class = "map-button">
+                        ^
+                    </button>
+                    <button class = "map-button">
+                        &#x2304;
+                    </button>
                     <canvas id="map" width="1000" height="500"></canvas>
                 </li>
         </div>
