--- a/index.html
+++ b/index.html
@@ -50,7 +50,11 @@
         <div class="works" id="works-section">
             <!-- absolute items -->
             <div id="works-popup">
-                <p id="popup-back"><- back</p>
+                <p id="popup-back">< back to project</p>
+                <div id = "popup-content">
+                    <h1>birthin co.</h1>
+                    <p></p>
+                </div>
             </div>
 
             <ul id="work-kanban" class="droppable">
