added projects page

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <!-- end absolute items -->
         <div class="home" id="home-section">
             <div class="home-intro">
-                <div class = "home-image">
-                    <img src = "">
+                <div class="home-image">
+                    <img src="">
                 </div>
                 <h1> Hi I'm Jerric</h1>
                 <p>I'm a Singapore-based student pursuing a Bachelor of Science in Information Systems, specializing in
@@ -50,10 +50,10 @@
         <div class="works" id="works-section">
             <!-- absolute items -->
             <div id="works-popup">
-                <p id="popup-back">< back to project</p>
-                <div id = "popup-content">
-                    <h1>birthin co.</h1>
-                    <p></p>
+                <div id="popup-back">
+                    <p>< back to projects</p>
+                </div>
+                <div id="popup-content">
                 </div>
             </div>
 
@@ -98,37 +98,36 @@
                     </div>
                 </li>
 
-                <li class="square-widget draggable calendar-widget">
+                <li class="square-widget draggable calendar-widget" data-project="mapping_buddy">
                     <img src="static/images/mapping_buddy.png">
                 </li>
 
-                <li class="square-widget draggable wellness-widget">
+                <li class="square-widget draggable wellness-widget" data-project="mood">
                     <img src="static/images/mood_logo.png">
                 </li>
 
-                <li class="square-widget draggable business-widget">
+                <li class="square-widget draggable business-widget" data-project="birthin">
                     <img src="static/images/birthin.png">
                 </li>
 
-                <li class="square-widget draggable camera-widget">
+                <li class="square-widget draggable camera-widget" data-project="xrperience">
                     <img src="static/images/xrperience_logo.png">
                 </li>
 
 
                 <li class="rect-widget map-widget draggable">
-                    <button class = "map-button">
-                        <
-                    </button>
-                    <button class = "map-button">
-                        >
-                    </button>
-                    <button class = "map-button">
-                        ^
-                    </button>
-                    <button class = "map-button">
-                        &#x2304;
-                    </button>
-                    <canvas id="map" width="1000" height="500"></canvas>
+                    <button class="map-button">
+                        < </button>
+                            <button class="map-button">
+                                >
+                            </button>
+                            <button class="map-button">
+                                ^
+                            </button>
+                            <button class="map-button">
+                                &#x2304;
+                            </button>
+                            <canvas id="map" width="1000" height="500"></canvas>
                 </li>
         </div>
         </div>
