--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="home" id="home-section">
             <div class="home-intro">
                 <div class="home-image">
-                    <img src="">
+                    <img src="/static/images/jerric_headshot_v1.png">
                 </div>
                 <h1> Hi, I'm Jerric. </h1>
                 <p>I'm a Singapore-based student pursuing a Bachelor of Science in Information Systems, specializing in Smart City technology. My passion lies in harnessing technology to create systems that improve lives. I aspire to be an entrepreneur, building businesses that put innovation at the service of social good. With skills in both front-end and back-end development and a familiarity with QGIS, I'm a problem-solver and team player ready to learn and contribute.</p>
