--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <main id="main">
         <nav>
             <ul>
-                <li><a href="#home-section">About Me</a></li>
-                <li><a href="#works-section">Projects</a></li>
-                <li><a href="#contact-section">Contact Me</a></li>
+                <li><a href="#home-section" class = "nav-links">About Me</a></li>
+                <li><a href="#works-section" class = "nav-links">Projects</a></li>
+                <!-- <li><a href="#contact-section">Contact Me</a></li> -->
             </ul>
         </nav>
         <!-- end absolute items -->
@@ -85,9 +85,9 @@
                 </li>
         </div>
         </div>
-        <div class="contact" id="contact-section">
+        <!-- <div class="contact" id="contact-section">
 
-        </div>
+        </div> -->
 
 
     </main>
