--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         </a>
                     </div>
                     <div class="home-links-stack">
-                        <a target="_blank" href="https://www.github.com/Jerric1801">
+                        <a target="_blank" href="./static/pdf/Jerric_Chan_Resume_2024.pdf">
                             <img src="static/images/personal-profile.png" alt="Resume Icon">
                             <p>Resume</p>
                         </a>
