remove kanban functionality

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.min.js"></script>
     <script type="module" src="/src/scripts/main.js"></script>
     <script type="module" src='/src/scripts/map.js'></script>
+    <link rel="icon" type="image/x-icon" href="/static/images/icons/favicon.png">
 </head>
 
 <body>
@@ -23,20 +24,20 @@
         <div class="home" id="home-section">
             <div class="home-intro">
                 <div class="home-image">
-                    <img src="/static/images/jerric_headshot_v1.png">
+                    <img src="/static/images/home/jerric_headshot_v1.png">
                 </div>
                 <h1> Hi, I'm Jerric. </h1>
                 <p>I'm a Singapore-based student pursuing a Bachelor of Science in Information Systems, specializing in Smart City technology. My passion lies in harnessing technology to create systems that improve lives. I aspire to be an entrepreneur, building businesses that put innovation at the service of social good. With skills in both front-end and back-end development and a familiarity with QGIS, I'm a problem-solver and team player ready to learn and contribute.</p>
                 <div class="home-links">
                     <div class="home-links-stack">
                         <a target="_blank" href="https://www.github.com/Jerric1801">
-                            <img src="static/images/github-logo.png" alt="Github Icon">
+                            <img src="static/images/home/github-logo.png" alt="Github Icon">
                             <p>Github</p>
                         </a>
                     </div>
                     <div class="home-links-stack">
                         <a target="_blank" href="./static/pdf/Jerric_Chan_Resume_2024.pdf">
-                            <img src="static/images/personal-profile.png" alt="Resume Icon">
+                            <img src="static/images/home/personal-profile.png" alt="Resume Icon">
                             <p>Resume</p>
                         </a>
                     </div>
@@ -60,19 +61,19 @@
                 </li>
 
                 <li class="square-widget draggable calendar-widget" data-project="mapping_buddy">
-                    <img src="static/images/mapping_buddy.png">
+                    <img src="static/images/home/mapping_buddy.png">
                 </li>
 
                 <li class="square-widget draggable wellness-widget" data-project="mood">
-                    <img src="static/images/mood_logo.png">
+                    <img src="static/images/home/mood_logo.png">
                 </li>
 
                 <li class="square-widget draggable business-widget" data-project="birthin">
-                    <img src="static/images/birthin.png">
+                    <img src="static/images/home/birthin.png">
                 </li>
 
                 <li class="square-widget draggable camera-widget" data-project="xrperience">
-                    <img src="static/images/xrperience_logo.png">
+                    <img src="static/images/home/xrperience_logo.png">
                 </li>
 
 
