--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./static/styles/style.css">
     <!-- jquery CDNs -->
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.min.js"></script>
-    <script type="module" src="/src/scripts/main.js"></script>
-    <script type="module" src='/src/scripts/map.js'></script>
+    <script type="module" src="/src/main.js"></script>
     <link rel="icon" type="image/x-icon" href="/static/images/icons/favicon.png">
 </head>
 
@@ -86,16 +85,12 @@
                 </li>
         </div>
         </div>
-        <!-- <div class="contact" id="contact-section">
+        <div class="contact" id="contact-section">
 
-        </div> -->
+        </div>
 
 
     </main>
-    <!-- stocks -->
-    <script type="module" src="src/scripts/stocks.js"></script>
-    <!-- kanban -->
-    <script type="module" src="src/scripts/kanban.js"></script>
 </body>
 
 </html>
