updated meta tags

--- a/index.html
+++ b/index.html
@@ -8,15 +8,30 @@
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.min.js"></script>
     <script type="module" src="/src/main.js"></script>
     <link rel="icon" type="image/x-icon" href="/static/images/icons/favicon.png">
+    <title>Jerric | Aspiring Entrepreneur</title>
+
+    <meta name="description"
+        content="Jerric Chan is a Singapore-based student and aspiring entrepreneur passionate about Smart City technology and using innovation for social good. Explore his portfolio and projects.">
+
+    <meta name="keywords"
+        content="Jerric Chan, portfolio, Smart City, technology, entrepreneur, Singapore, information systems, front-end development, back-end development, QGIS, innovation, social good">
+
+    <meta name="author" content="Jerric Chan">
+
+    <meta property="og:title" content="Jerric's Portfolio">
+    <meta property="og:description" content="Explore Jerric's portfolio and projects.">
+    <meta property="og:url" content="https://jerric.fun">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="/static/images/icons/favicon.png">
 </head>
 
 <body>
     <main id="main">
         <nav>
             <ul>
-                <li><a href="#home-section" class = "nav-links">About Me</a></li>
-                <li><a href="#works-section" class = "nav-links">Projects</a></li>
-                <!-- <li><a href="#contact-section">Contact Me</a></li> -->
+                <li><a href="#home-section" class="nav-links">About Me</a></li>
+                <li><a href="#works-section" class="nav-links">Projects</a></li>
+                <li><a href="#contact-section">Contact Me</a></li>
             </ul>
         </nav>
         <!-- end absolute items -->
@@ -26,7 +41,11 @@
                     <img src="/static/images/home/jerric_headshot_v1.png">
                 </div>
                 <h1> Hi, I'm Jerric. </h1>
-                <p>I'm a Singapore-based student pursuing a Bachelor of Science in Information Systems, specializing in Smart City technology. My passion lies in harnessing technology to create systems that improve lives. I aspire to be an entrepreneur, building businesses that put innovation at the service of social good. With skills in both front-end and back-end development and a familiarity with QGIS, I'm a problem-solver and team player ready to learn and contribute.</p>
+                <p>I'm a Singapore-based student pursuing a Bachelor of Science in Information Systems, specializing in
+                    Smart City technology. My passion lies in harnessing technology to create systems that improve
+                    lives. I aspire to be an entrepreneur, building businesses that put innovation at the service of
+                    social good. With skills in both front-end and back-end development and a familiarity with QGIS, I'm
+                    a problem-solver and team player ready to learn and contribute.</p>
                 <div class="home-links">
                     <div class="home-links-stack">
                         <a target="_blank" href="https://www.github.com/Jerric1801">
@@ -56,7 +75,7 @@
 
             <ul id="work-kanban" class="droppable">
 
-                <li class="rect-widget stock-widget draggable" id = "stocks">
+                <li class="rect-widget stock-widget draggable" id="stocks">
                 </li>
 
                 <li class="square-widget draggable calendar-widget" data-project="mapping_buddy">
@@ -84,12 +103,9 @@
                     <canvas id="map" width="1000" height="500"></canvas>
                 </li>
         </div>
-        </div>
         <div class="contact" id="contact-section">
-
+            
         </div>
-
-
     </main>
 </body>
 
