--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <ul>
                 <li><a href="#home-section" class="nav-links">About Me</a></li>
                 <li><a href="#works-section" class="nav-links">Projects</a></li>
-                <li><a href="#contact-section">Contact Me</a></li>
+                <!-- <li><a href="#contact-section">Contact Me</a></li> -->
             </ul>
         </nav>
         <!-- end absolute items -->
@@ -41,11 +41,7 @@
                     <img src="/static/images/home/jerric_headshot_v1.png">
                 </div>
                 <h1> Hi, I'm Jerric. </h1>
-                <p>I'm a Singapore-based student pursuing a Bachelor of Science in Information Systems, specializing in
-                    Smart City technology. My passion lies in harnessing technology to create systems that improve
-                    lives. I aspire to be an entrepreneur, building businesses that put innovation at the service of
-                    social good. With skills in both front-end and back-end development and a familiarity with QGIS, I'm
-                    a problem-solver and team player ready to learn and contribute.</p>
+                <p>I'm a tech enthusiast with a social conscience and a knack for creative problem-solving. I believe in challenging the status quo and using technology to make a real difference in the world.  I'm always learning, growing, and exploring new ways to contribute to a more sustainable and inclusive future.</p>
                 <div class="home-links">
                     <div class="home-links-stack">
                         <a target="_blank" href="https://www.github.com/Jerric1801">
@@ -54,7 +50,7 @@
                         </a>
                     </div>
                     <div class="home-links-stack">
-                        <a target="_blank" href="./static/pdf/Jerric_Chan_Resume_2024.pdf">
+                        <a target="_blank" href="./static/pdf/Resume.pdf">
                             <img src="static/images/home/personal-profile.png" alt="Resume Icon">
                             <p>Resume</p>
                         </a>
@@ -103,9 +99,9 @@
                     <canvas id="map" width="1000" height="500"></canvas>
                 </li>
         </div>
-        <div class="contact" id="contact-section">
+        <!-- <div class="contact" id="contact-section">
             
-        </div>
+        </div> -->
     </main>
 </body>
 
